--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ sqlalchemy = "^2.0.44"
 pymysql = "^1.1.2"
 msal = "^1.34.0"
 flask-sqlalchemy = "^3.1.1"
+apscheduler = "^3.11.1"
+pytz = "^2025.2"
+croniter = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
